OS2DISP-113: Fixed overflow

--- a/Resources/public/templates/horizon/slides/horizon-calendar-info/horizon-calendar-info.scss
+++ b/Resources/public/templates/horizon/slides/horizon-calendar-info/horizon-calendar-info.scss
@@ -19,6 +19,7 @@ $box-shadow: 0 0 16px $color-box-shadow-black;
   color: #333;
   padding: 0;
   margin: 0;
+  overflow: hidden;
 
   h1, h2, p {
     padding: 0;
